# autogpt-ui

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  docker-how-to.txt  env-backend.env.example  env-frontend.env.example  env-guidance.txt  env-mysql.env.example  how-to-docker.txt  license.md  script.py
backend/: Dockerfile  backend_pre_start.py  entrypoint.sh  gunicorn_conf.py  pyproject.toml  schema.prisma
backend/migrations/20230508151038_initial/: migration.sql
backend/prisma_partial/: types.py
backend/src/app/: __init__.py  run.py  run_worker.py  types.py
backend/src/app/api/helpers/: bots.py  responses.py  security.py
backend/src/app/api/v1/: api.py
backend/src/app/api/v1/routes/: bots.py  sessions.py
backend/src/app/auto_gpt/: agent.py  api_manager.py  cli.py  install_plugin_deps.py  main.py  memory.py  plugins.py  utilities.py
backend/src/app/clients/: __init__.py  auth_backend.py  base.py
backend/src/app/core/: __init__.py  config.py  globals.py  init_logging.py
backend/src/app/helpers/: jobs.py  readers.py  system.py
backend/src/app/schemas/: bot.py  enums.py
backend/src/app/worker/: main.py
backend/src/app/worker/tasks/: run_auto_gpt.py
backend/src/tests/: conftest.py
backend/src/tests/api/v1/: test_sessions.py
backend/src/tests/helpers/: auth_backend_mocker.py
frontend/: .dockerignore  .eslintrc.js  .prettierrc  Dockerfile  ecosystem.config.js  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/: app.vue  components.d.ts
frontend/src/assets/scss/: _highlight.scss  main.scss
frontend/src/components/: LogViewer.vue
frontend/src/composables/: apiManager.ts
frontend/src/interfaces/: api.ts  bot.ts  enums.ts  index.ts  select.ts
frontend/src/middleware/: auth.global.ts
frontend/src/pages/: index.vue
frontend/src/plugins/: naive-ui.ts
frontend/src/utils/: formatters.ts  mergers.ts
