[tool.poetry]
name = "auto-gpt-ui-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "auto_gpt_ui_backend"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = {extras = ["uvicorn"], version = "^0.95.1"}
prisma = "^0.8.2"
aiohttp = "^3.8.4"
loguru = "^0.7.0"
furl = "^2.1.3"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
sqlalchemy = "^2.0.12"
tenacity = "^8.2.2"
uvicorn = "^0.22.0"
pymysql = "^1.0.3"
regex = "^2023.3.23"
more-itertools = "^9.1.0"
humanize = "^4.6.0"
taskiq = "^0.4.1"
taskiq-redis = "^0.3.0"
anyio = "^3.6.2"
pyyaml = "^6.0"
arq = "^0.25.0"
gunicorn = "^20.1.0"
python-multipart = "^0.0.6"
aiostream = "^0.4.5"
python-magic = "^0.4.27"
ijson = "^3.2.0.post0"
orjson = "^3.9.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
ipython = "^8.13.1"
types-tzlocal = "^4.3.0.0"


[tool.poetry.group.local.dependencies]
agpt = {git = "https://github.com/Significant-Gravitas/Auto-GPT", rev = "stable"}

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
