[tool.poetry]
name = "auto-gpt-ui-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "auto_gpt_ui_backend"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = {extras = ["uvicorn"], version = "^0.95.1"}
prisma = "^0.8.2"
aiohttp = "^3.8.4"
loguru = "^0.7.0"
furl = "^2.1.3"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
sqlalchemy = "^2.0.12"
tenacity = "^8.2.2"
uvicorn = "^0.22.0"
pymysql = "^1.0.3"
regex = "^2023.3.23"
more-itertools = "^9.1.0"
humanize = "^4.6.0"
taskiq = "^0.4.1"
taskiq-redis = "^0.3.0"
anyio = "^3.6.2"
pyyaml = "^6.0"
arq = "^0.25.0"
gunicorn = "^20.1.0"
python-multipart = "^0.0.6"
aiostream = "^0.4.5"
python-magic = "^0.4.27"
ijson = "^3.2.0.post0"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
ipython = "^8.13.1"
types-tzlocal = "^4.3.0.0"
async-asgi-testclient = "^1.4.11"
fakeredis = "^2.14.1"
pytest = "^7.3.2"
types-redis = "^4.5.5.2"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"


[tool.poetry.group.local.dependencies]
agpt = {git = "https://github.com/Significant-Gravitas/Auto-GPT", rev = "stable"}
beautifulsoup4 = ">=4.12.2"
colorama = "0.4.6"
distro = "1.8.0"
openai = "0.27.2"
playsound = "1.2.2"
python-dotenv = "1.0.0"
pyyaml = "6.0"
pypdf2 = "^3.0.1"
python-docx = "^0.8.11"
markdown = "^3.4.3"
pylatexenc = "^2.10"
readability-lxml = "0.8.1"
requests = "^2.31.0"
tiktoken = "0.3.3"
gtts = "2.3.1"
docker = "^6.1.3"
duckduckgo-search = "3.0.2"
google-api-python-client = "^2.88.0"
pinecone-client = "2.2.1"
redis = "^4.5.5"
orjson = "3.8.10"
pillow = "^9.5.0"
selenium = "4.1.4"
webdriver-manager = "^3.8.6"
jsonschema = "^4.17.3"
click = "^8.1.3"
charset-normalizer = ">=3.1.0"
spacy = ">=3.0.0,<4.0.0"
openapi-python-client = "0.13.4"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl"}
auto-gpt-plugin-template = {git = "https://github.com/Significant-Gravitas/Auto-GPT-Plugin-Template", rev = "0.1.0"}
prompt-toolkit = ">=3.0.38"
numpy = "^1.25.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
